# coco_utils

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
coco_utils/: coco_ids_to_int.py  coco_types.py  convert_VOC_to_coco.py  flatten_data_structure.py  imgs_to_grayscale.py  merge_coco.py  old_convert_cocolike_to_coco.py  remove_samples.py  resize_coco.py  split_train_val_coco.py  video_to_coco.py  visualize_coco_data.py  visualize_coco_data_pycocotools.py
docs/: package_readme.md
requirements/: README.md  requirements-dev.txt  requirements-test.txt  requirements.txt
resources/: annotations.json
src/: coco_ids_to_int.py  convert_VOC_to_coco.py  convert_segmentation_type.py  flatten_data_structure.py  imgs_to_grayscale.py  merge_coco.py  reindex_class_indices.py  remove_imgs_without_annotations.py  resize_coco.py  split_train_val_coco.py  subsample_dataset.py  visualize_coco_data.py  visualize_coco_data_pycocotools.py  visualize_coco_data_rpycocotools.py  visualize_coco_keypoints.py  visualize_solo.py
src/types/: coco_keypoints.py  coco_object_detection.py  coco_types.py  img_types.py  solo_annotation_definitions.py  solo_frame_data.py
src/utils/: imgs_misc.py  misc.py  segmentation_conversions.py
tests/: test_segmentation.py  test_visualize_coco_data.py
